log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Wed May 13 11:50:17 PM UTC 2026: 
 graph.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:32:23: error: implicit declaration of function ‘createMap’; did you mean ‘createGraph’? [-Wimplicit-function-declaration]
   32 |     g->adjacencyMap = createMap(is_equal_string);
      |                       ^~~~~~~~~
      |                       createGraph
graph.c:32:21: error: assignment to ‘Map *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   32 |     g->adjacencyMap = createMap(is_equal_string);
      |                     ^
ee9516a
Wed May 13 11:51:20 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b591c3f
Wed May 13 11:59:22 PM UTC 2026: 
 graph.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:47:33: error: passing argument 2 of ‘map_insert’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   47 |     map_insert(g->adjacencyMap, label, edges);
      |                                 ^~~~~
In file included from graph.c:8:
map.h:18:33: note: expected ‘void *’ but argument is of type ‘const char *’
   18 | void map_insert(Map *map, void *key, void *value);
      |                           ~~~~~~^~~
cc1: all warnings being treated as errors
556b149
Wed May 13 11:59:46 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a6a6fab
Thu May 14 12:13:16 AM UTC 2026: 
 graph.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|0
dd9783f
Thu May 14 12:27:14 AM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
3e6eaaa
Thu May 14 12:37:36 AM UTC 2026: 
 graph.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|0
cd6713b
Thu May 14 12:40:30 AM UTC 2026: 
 graph.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
0d8cd74
Thu May 14 12:45:08 AM UTC 2026: 
 graph.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
8399b30
Thu May 14 12:57:26 AM UTC 2026: 
 graph.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  0|0
7043d9e
Thu May 14 01:17:58 AM UTC 2026: 
 graph.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:44:8: error: ‘cpylabel’ undeclared (first use in this function); did you mean ‘cpyLabel’?
   44 |     if(cpylabel == NULL) return;
      |        ^~~~~~~~
      |        cpyLabel
graph.c:44:8: note: each undeclared identifier is reported only once for each function it appears in
graph.c:43:11: error: unused variable ‘cpyLabel’ [-Werror=unused-variable]
   43 |     char *cpyLabel = (char*)malloc(strlen(label)+1);
      |           ^~~~~~~~
cc1: all warnings being treated as errors
5e164b8
